# minimal-sigsegv-rust

./: Cargo.toml  README.md
src/: element.rs  group.rs  main.rs  ref_ir.rs
src/disamb/: finite_automata.rs  mod.rs
