[package]
name = "minimal"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# petgraph = { version = "0.5.1", default-features = false, optional = true }
# itertools = "0.9.0"
# fnv = "1.0.7"
